warning is confusing